@@ -1,5 +1,10 @@
 2007-02-04  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valacodegenerator.vala: use correct type cname in array creation
+	  expression, don't assume that all string arrays own their content
+
+2007-02-04  Jürg Billeter  <j@bitron.ch>
+
 	* vala/parser.y: fix crash when parsing array creation expression
 
 2006-12-23  Jürg Billeter  <j@bitron.ch>
